# WebArticleClassifier

./: Arcicle Classifier – działanie prototypu.pptx  README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json  tsconfig.json
docuService/: docuService.py  pyproject.toml
docuService/trained_llm_model_pl/: config.json
src/: index.html
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  prediction.service.spec.ts  prediction.service.ts
