[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["Piotr Barabasz <barabasz.piotrek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-cors = "^4.0.1"
transformers = "^4.41.2"
torch = "^2.3.1"
nltk = "^3.8.1"
morfeusz2 = "^1.99.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
